[project]
name = "dbc-utility"
version = "1.0.2"
description = "A PyQt5-based GUI application for viewing, editing, and managing CAN (Controller Area Network) DBC files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "Abhijith Purohit"}
]
keywords = ["can", "dbc", "automotive", "gui", "pyqt5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyQt5>=5.15.2",
    "cantools>=40.0.0",
    "pyinstaller>=5.0.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
dbcUtility = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/dbcUtility"
Repository = "https://github.com/yourusername/dbcUtility"
Issues = "https://github.com/yourusername/dbcUtility/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]

